unpackaged/main/default/objects/CodesPays__c/CodesPays__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CodesPays</label>
</CustomObject>