unpackaged/main/default/objects/CodesPays__c/fields/Code_Pays__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays__c</fullName>
    <label>Code_Pays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>