unpackaged/main/default/objects/CodesPays__c/fields/LIBELLE_PROPERTIES__c.field-meta.xml
<CustomField>
    <fullName>LIBELLE_PROPERTIES__c</fullName>
    <label>LIBELLE_PROPERTIES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>