unpackaged/main/default/objects/CodesPays__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Pays__c</columns>
    <columns>Code_Pays2__c</columns>
    <columns>Libelle_de__c</columns>
    <columns>Libelle_en_GB__c</columns>
    <columns>Libelle_es__c</columns>
    <columns>Libelle_fr__c</columns>
    <columns>Libelle_it__c</columns>
    <columns>LIBELLE_PROPERTIES__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>